chore: fix width white space

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,4 +25,6 @@
 
 html, body {
   @apply bg-white;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
